DT-1789, DT-1804 - basket summary fix in mobile and product input aligned

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -170,7 +170,7 @@
 }
 
 .form-group.productlist-search button.btn {
-    padding: 7px 20px;
+    height: 38px;
     background-position: top 10px right 24px;
 }
 
@@ -677,7 +677,7 @@
     th {
       text-align: left;
       position: relative;
-      left: 20px;
+      padding-left: 20px;
     }
             tr td {
             border-bottom: 1px solid darken(@color-swatch1,10%);
